--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="./css/stayle.css">
         <link rel="stylesheet" href="./css/all.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <title>CATER SERV</title>
     </head>
     <body>
@@ -445,4 +446,5 @@
 
 <script src="./js/all.js"></script>
     </body>
+
     </html>
